# smart_schedule20260330

./: .gitignore  README.md  docker-compose.yml
server/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_baseline.py  0002_knowledge_base_state.py  0003_schedule_allow_rag_indexing.py  0004_schedule_end_time_nullable.py  0005_optional_email_reminders.py  0006_demo_quota_tiers.py  0007_ai_usage_ledger.py  0008_normalize_subscription_tier_values.py
server/app/: __init__.py  main.py
server/app/core/: __init__.py  auth.py  config.py  database.py  security.py
server/app/models/: __init__.py  ai_usage_event.py  base.py  chat_history.py  email_reminder.py  enums.py  knowledge_base_state.py  schedule.py  share_link.py  user.py  vector_chunk.py
server/app/routers/: __init__.py  admin.py  auth.py  health.py  parse.py  rag.py  schedules.py  share.py  sync.py
server/app/schemas/: __init__.py  admin.py  auth.py  parse.py  rag.py  schedule.py  share.py  sync.py
server/app/scripts/: bootstrap_migrations.py  perf_probe.py
server/app/services/: __init__.py  admin_service.py  ai_runtime.py  auth_service.py  email_reminder_service.py  llm_provider.py  mail_service.py  parse_service.py  quota_service.py  rag_service.py  (+3 more)
server/tests/: auth_helpers.py  db_helpers.py  test_admin_api.py  test_ai_langchain_integration.py  test_ai_quota_demo.py  test_auth_api.py  test_email_reminders.py  test_parse_contract.py  test_rag_workflow.py  test_schedule_crud.py  test_share_api.py  test_smoke.py  test_sync_api.py
(+64 files in other folders)
